--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,25 @@
+<!--
+* File: index.html
+* Author: Béres Délia
+* Copyright: 2023, Béres Délia
+* Group: Szoft I-1 E
+* Date: 2023-03-21
+* Github: https://github.com/beresdelia/
+* Licenc: GNU GPL
+-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo</title>
+    <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
     <div class="container">
         <h1>Todo</h1>
-        <table>
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Az</th>
@@ -19,6 +29,9 @@
             </thead>
             <tbody id="tbody"></tbody>
         </table>
+    </div>
+    <div class="about">
+        Béres Délia, 2023-03-21, SzoftI-1 E
     </div>
     <script src="app.js"></script>
     
